gcc/testsuite/rust/rustc/ui/error-codes/E0191.rs
trait Trait {
    type Bar;
}

type Foo = dyn Trait; // { dg-error ".E0191." "" { target *-*-* } }

fn main() {}

